spec/golden/errors/internal_select.tn
ch = Channel(Int32).new
spawn do
  ch.send(1)
end
idx, val = Channel.select({ch.receive_select_action})
puts idx
